--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,7 @@
 /* Page */
 body {
 	background: #333333 url('../images/page-background.png') repeat top left;
+	font-family: arial,sans-serif;
 }
 
 /* Text */
@@ -31,6 +32,37 @@ a.github-ribbon {
 	top: 0;
 	left: 0;
 	border: 0;
+}
+
+a.download-button {
+	display: block;
+	padding: 15px 20px 10px 20px;
+	color: #FFFFFF;
+	text-decoration: none;
+	font-size: 28px;
+	font-weight: bold;
+	background: #33A700 url('../images/github-logo.png') no-repeat 92% 50%;
+	border: 2px solid #339410;
+	-webkit-box-shadow: 3px 3px 5px #000000;
+	-moz-box-shadow: 3px 3px 5px #000000;
+	box-shadow: 3px 3px 5px #000000;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	border-radius: 5px;
+	-webkit-transition: background 350ms ease;
+	-moz-transition: background 350ms ease;
+	-o-transition: background 350ms ease;
+	transition: background 350ms ease;
+}
+
+a.download-button:hover {
+	background-color: #267C00;
+}
+
+a.download-button span {
+	font-size: 14px;
+	display: block;
+	margin-top: 2px;
 }
 
 /* Header */
