--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,7 @@ header {
 	padding-top: 45px;
 	border-bottom: 2px solid #77746C;
 	padding-bottom: 28px;
-	margin-bottom: 35px;
+	margin-bottom: 40px;
 }
 
 /* Text */
@@ -32,6 +32,13 @@ h1 {
 h2 {
 	color: #CCCCCC;
 	font-size: 20px;
+}
+
+h3 {
+	color: #FFFFFF;
+	font-weight: bold;
+	font-family: inherit;
+	font-size: 28px;
 }
 
 /* Useful classes */
