--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,7 @@ body {
 
 /* Header */
 header {
-	padding-top: 45px;
+	padding-top: 50px;
 	border-bottom: 2px solid #77746C;
 	padding-bottom: 28px;
 }
@@ -42,6 +42,18 @@ body:before {
 	float: left;
 	width: 0;
 	margin-top: -32767px;
+}
+
+div.credits {
+	padding-top: 9px;
+	margin-top: 30px;
+	margin-bottom: 25px;
+	border-top: 1px solid #DDD2B2;
+	text-align: center;
+}
+
+div.credits p {
+	color: #333333;
 }
 
 /* Text */
