--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,7 +17,6 @@ footer {
 	background-color: #FFFFFF;
 	position: relative;
 	margin-top: -200px;
-	padding-top: 30px;
 	clear: both;
 	-webkit-box-shadow: -10px 0 15px #000000;
 	-moz-box-shadow: -10px 0 15px #000000;
@@ -55,6 +54,10 @@ div.credits {
 
 footer p {
 	color: #333333;
+}
+
+div.repo-author {
+	padding-top: 30px;
 }
 
 /* Text */
