--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -147,6 +147,11 @@ pre.prettyprint {
 	margin: 0;
 }
 
+img.repo-author-logo {
+	float: left;
+	margin-right: 15px;
+}
+
 /* Media queries */
 /* Hide the ribbon when we are on a phone, screen is too small */
 @media only screen and (max-width: 479px) {
