Added licence information

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,10 @@
+/**
+ * A clean concise theme for your GitHub projects
+ *
+ * Licenced under GPL v3
+ * https://www.gnu.org/licenses/gpl.html
+ **/
+
 /* Page */
 body {
 	background: #333333 url('../images/page-background.png') repeat top left;
