Changed the protocol of the licence link to http

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,7 @@
  * A clean concise theme for your GitHub projects
  *
  * Licenced under GPL v3
- * https://www.gnu.org/licenses/gpl.html
+ * http://www.gnu.org/licenses/gpl.html
  **/
 
 /* Page */
