Implemented the new text styles for list items and strong text. Fixes #3

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,9 +44,14 @@ div.repo-author {
 }
 
 /* Text */
-p {
-	color: #CCCCCC;
-	font-size: 14px;
+p, strong, li {
+    color: #CCCCCC;
+    font-size: 14px;
+}
+
+strong {
+    font-weight: bold;
+    color: #EEEEEE;
 }
 
 a {
